changed design to one window to clean up code

--- a/styles/style.css
+++ b/styles/style.css
@@ -47,6 +47,10 @@ section {
     border: solid 2px var(--color1);
 }
 
+.buttons {
+    
+}
+
 header {
     display: flex;
     justify-content: flex-end;
